Adds data to project list json
Adds number of current Treehouse projects to json data

--- a/project-data.json
+++ b/project-data.json
@@ -8,6 +8,51 @@
       "live_link": "ipsum link",
       "github_link": "ipsum github link",
       "image_urls": []
+    },
+    {
+      "id": 1,
+      "project_name": "Data Pagination and Filtering",
+      "description": "ipsum",
+      "technologies": [],
+      "live_link": "ipsum link",
+      "github_link": "ipsum github link",
+      "image_urls": []
+    },
+    {
+      "id": 2,
+      "project_name": "Interactive Form",
+      "description": "ipsum",
+      "technologies": [],
+      "live_link": "ipsum link",
+      "github_link": "ipsum github link",
+      "image_urls": []
+    },
+    {
+      "id": 3,
+      "project_name": "OOP Game Show App",
+      "description": "ipsum",
+      "technologies": [],
+      "live_link": "ipsum link",
+      "github_link": "ipsum github link",
+      "image_urls": []
+    },
+    {
+      "id": 4,
+      "project_name": "Public API Requests",
+      "description": "ipsum",
+      "technologies": [],
+      "live_link": "ipsum link",
+      "github_link": "ipsum github link",
+      "image_urls": []
+    },
+    {
+      "id": 5,
+      "project_name": "Static Node.js and Express Site",
+      "description": "ipsum",
+      "technologies": [],
+      "live_link": "ipsum link",
+      "github_link": "ipsum github link",
+      "image_urls": []
     }
   ]
 }
